Correction align hero page 1

--- a/src/app/pages/page1/page1.component.css
+++ b/src/app/pages/page1/page1.component.css
@@ -13,10 +13,9 @@
 
 .flexbox-container {
   display: flex;
-  justify-content: space-between;
 }
 
-.negativeMargins {
+.hero {
   margin-left: -1rem;
   margin-right: -1rem;
 }
